--- a/apps/docs/docs/concepts/hooks.mdx
+++ b/apps/docs/docs/concepts/hooks.mdx
@@ -83,8 +83,8 @@ export type KilpiOnAfterAuthorizationEvent<T extends AnyKilpiCore> = {
   authorization: Authorization<InferPolicySubject<T["$$infer"]["policies"]>>;
 
   /**
-   * The resource being authorized
+   * The object being authorized
    */
-  resource?: unknown;
+  object?: unknown;
 };
 ```
