--- a/apps/docs/docs/concepts/subject.mdx
+++ b/apps/docs/docs/concepts/subject.mdx
@@ -82,7 +82,7 @@ const getSubject = cache(() => {
 });
 ```
 
-If you have data that is only used in a few policies, it should either be **fetched in the policy function** (preferred) or be passed down as the resource.
+If you have data that is only used in a few policies, it should either be **fetched in the policy function** (preferred) or be passed down as the object.
 
 ### Subject caching
 
