--- a/apps/docs/docs/plugins/endpoint.mdx
+++ b/apps/docs/docs/plugins/endpoint.mdx
@@ -32,7 +32,7 @@ See [usage on client](/docs/getting-started/usage-on-client) for how to set up `
 ```ts
 await KilpiClient.fetchIsAuthorized({
   key: "documents:delete",
-  resource: myDocument,
+  object: myDocument,
 });
 ```
 
@@ -81,7 +81,7 @@ type RequestBody = Array<
       type: "getIsAuthorized";
       requestId: string;
       policy: string; // Policy key (e.g. "documents:create")
-      resource?: any; // Optional resource
+      object?: any; // Optional object
     }
   | {
       type: "getSubject";
