--- a/apps/docs/docs/advanced/abac.mdx
+++ b/apps/docs/docs/advanced/abac.mdx
@@ -9,17 +9,18 @@ sidebar:
 With Kilpi, you don't have to decide between [RBAC](/docs/advanced/rbac), [ABAC](/docs/advanced/abac), [ReBAC](/docs/advanced/rebac) or other access control models. Kilpi allows fluidly mixing them together based on your needs with a single declarative API. Besides, [RBAC](/docs/advanced/rbac), [ABAC](/docs/advanced/abac) and [ReBAC](/docs/advanced/rebac) are not completely separate models (e.g. [RBAC](/docs/advanced/rbac) is a subset of [ABAC](/docs/advanced/abac)).
 
 This guide is a tutorial on how to implement authorization policies that would fall under the term of ABAC.
+
 </Aside>
 
 Implementing attribute-based access control (ABAC) with Kilpi is trivial as the Policy API is built to support it.
 
 ## What is ABAC?
 
-Unlike [Role-based Access Control or RBAC](/docs/advanced/rbac), which simply defines that a subject is allowed to perform an action based on their role, ABAC alows to customize policies based on **attributes**. These attributes may be related to the user (role, age, subscription, ...) or the resource being accessed (status, owner, ...).
+Unlike [Role-based Access Control or RBAC](/docs/advanced/rbac), which simply defines that a subject is allowed to perform an action based on their role, ABAC alows to customize policies based on **attributes**. These attributes may be related to the user (role, age, subscription, ...) or the object being accessed (status, owner, ...).
 
 An example of an ABAC policy with several attributes.
 
-> Allow a **user** (subject) to delete (action) a document (resource) if the user is the **owner of the document** (attribute) and the **document is not expired** (attribute) or the **user is an admin** (attribute).
+> Allow a **user** (subject) to delete (action) a document (object) if the user is the **owner of the document** (attribute) and the **document is not expired** (attribute) or the **user is an admin** (attribute).
 
 ## Implementing ABAC
 
@@ -29,16 +30,16 @@ Implementing the above policy is trivial with the Kilpi Policy API.
 const policies = {
   documents: {
     delete(user, document: Document) {
-      if (!user) return deny()
-      if (user.isAdmin) return grant(user)
-      if (user.id === document.ownerId && !document.expired) return grant(user)
-      return deny()
-    }
-  }
+      if (!user) return deny();
+      if (user.isAdmin) return grant(user);
+      if (user.id === document.ownerId && !document.expired) return grant(user);
+      return deny();
+    },
+  },
 };
 
 async function deleteDocument(document: Document) {
-  await Kilpi.authorize('documents:delete', document);
+  await Kilpi.authorize("documents:delete", document);
   await db.deleteDocument(document.id);
 }
 ```
